# blitzed

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  codecov.yml  pyproject.toml  rustfmt.toml
.github/workflows/: ci.yml  fast-ci.yml  full-ci.yml  medium-ci.yml  pipewright.yml
blitzed-core/: Cargo.toml
blitzed-core/benches/: optimization_bench.rs
blitzed-core/src/: config.rs  deployment.rs  error.rs  inference.rs  lib.rs  model.rs  onnx_analyzer.rs  profiler.rs  tensor_ops.rs  validation.rs
blitzed-core/src/benchmarking/: metrics.rs  mod.rs  suite.rs
blitzed-core/src/codegen/: arduino.rs  c.rs  esp32.rs  mod.rs  raspberry_pi.rs  stm32.rs
blitzed-core/src/converters/: mod.rs  onnx.rs  pytorch.rs  tensorflow.rs
blitzed-core/src/optimization/: distillation.rs  mod.rs  optimizer.rs  pruning.rs  quantization.rs
blitzed-core/src/simulation/: calibration.rs  constraints.rs  mod.rs  performance.rs  qemu.rs
blitzed-core/src/targets/: arduino.rs  esp32.rs  mobile.rs  mod.rs  raspberry_pi.rs  stm32.rs
blitzed-core/tests/: advanced_quantization_test.rs  arduino_integration.rs  benchmarking_basic_test.rs  benchmarking_suite_test.rs  calibration_dataset_test.rs  cli_test.rs  cross_format_real_validation_test.rs  cross_format_validation_test.rs  distillation_integration_test.rs  enhanced_simulation_test.rs  full_benchmark_demo_test.rs  hardware_deployment_validation_test.rs  large_model_optimization_test.rs  onnx_converter_test.rs  onnx_real_test.rs  pruning_integration_test.rs  pytorch_converter_test.rs  pytorch_real_test.rs  stm32_integration.rs  unified_pipeline_test.rs
blitzed-py/: Cargo.toml
blitzed-py/src/: lib.rs
esp32_demo/hall_classifier/: CMakeLists.txt  sdkconfig.defaults
esp32_demo/hall_classifier/main/: CMakeLists.txt  blitzed_inference.c  blitzed_inference.h  blitzed_model_weights.h  main.c
esp32_demo/predictive_maintenance/: CMakeLists.txt
esp32_demo/predictive_maintenance/main/: blitzed_inference.c  blitzed_inference.h  blitzed_model_weights.h  main.c  mpu6050.c  mpu6050.h
esp32_demo/temp_anomaly/: CMakeLists.txt
esp32_demo/temp_anomaly/main/: blitzed_inference.c  blitzed_inference.h  blitzed_model_weights.h  main.c
esp32_demo/touch_gesture/: CMakeLists.txt
esp32_demo/touch_gesture/main/: CMakeLists.txt  blitzed_inference.c  blitzed_inference.h  blitzed_model_weights.h  feature_extract.c  feature_extract.h  main.c  touch_sensor.c  touch_sensor.h
esp32_demo/vibration_classifier/: CMakeLists.txt  sdkconfig.defaults
esp32_demo/vibration_classifier/main/: CMakeLists.txt  blitzed_inference.c  blitzed_inference.h  blitzed_model_weights.h  main.c  mpu6050.c  mpu6050.h
examples/: benchmark_demo.rs
python/blitzed/: __init__.py
python/blitzed/cli/: __init__.py  main.py
python/blitzed/cli/tests/: test_main.py
python/blitzed/converters/: __init__.py  base.py  tflite.py
python/blitzed/optimization/: __init__.py  optimizer.py  quantization.py
python/blitzed/targets/: __init__.py
python/blitzed/tests/optimization/: test_quantization.py
tests/: test_basic.rs
tools/: train_hall_sensor_classifier.py  train_predictive_maintenance.py  train_temp_anomaly_detector.py  train_touch_gesture_classifier.py  train_vibration_classifier.py
