[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "blitzed"
version = "0.1.0"
description = "High-performance edge AI optimization framework"
authors = [
    {name = "Gibran Rodriguez", email = "brangi000@gmail.com"},
]
maintainers = [
    {name = "Gibran Rodriguez", email = "brangi000@gmail.com"},
]
license = {text = "MIT OR Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["machine-learning", "edge-ai", "optimization", "quantization", "neural-networks"]
dependencies = [
    "numpy>=1.20.0",
    "click>=8.0.0",
    "tqdm>=4.60.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "pre-commit>=2.15.0",
]
torch = ["torch>=1.13.0", "torchvision>=0.14.0"]
tensorflow = ["tensorflow>=2.10.0"]
onnx = ["onnx>=1.12.0", "onnxruntime>=1.12.0"]

[project.urls]
Homepage = "https://github.com/brangirod/blitzed"
Repository = "https://github.com/brangirod/blitzed"
"Bug Tracker" = "https://github.com/brangirod/blitzed/issues"

[project.scripts]
blitzed = "blitzed.cli:main"

[tool.maturin]
python-source = "python"
module-name = "blitzed._core"
features = ["pyo3/extension-module"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true